# NeuroMeshOSS

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PRODUCTION_REVIEW.md  README.md  SECURITY.md  docker-compose.yml  start-app.bat
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: alembic.ini  neuromesh.db  pyproject.toml
backend/scripts/: seed.py
backend/src/: main.py
backend/src/adapters/database/: models.py  repositories.py  session.py
backend/src/adapters/queue/: redis_queue.py
backend/src/adapters/telemetry/: metrics.py  opentelemetry.py
backend/src/api/: middleware.py  websockets.py
backend/src/api/v1/: auth.py  workflows.py
backend/src/config/: settings.py
backend/src/core/entities/: run.py  user.py  workflow.py
backend/src/core/ports/: plugins.py  queue.py  repositories.py  vector.py
backend/src/services/: auth_service.py  mcp_client.py  plugin_loader.py  workflow_engine.py  workflow_service.py
backend/src/workers/: daemon.py
backend/tests/: conftest.py  test_api.py  test_placeholder.py  test_queue.py  test_repositories.py
cli/: pyproject.toml
cli/src/: main.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/metrics/: page.tsx
frontend/src/app/plugins/: page.tsx
frontend/src/app/secrets/: page.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/components/: LogConsole.tsx  SpotlightCard.tsx  SwarmIntelligence.tsx
frontend/src/lib/: api-client.ts  store.ts  themes.ts
plugins/: filesystem.py  github.py  slack.py
sdk/python/: pyproject.toml
sdk/python/src/: client.py
sdk/typescript/: package.json
sdk/typescript/src/: client.ts
