[tool.poetry]
name = "neuromesh-backend"
version = "0.1.0"
description = "NeuroMeshOSS Backend Control Plane API & Worker Engine"
authors = ["NeuroMesh Maintainers <maintainers@neuromesh.local>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.111,<0.140"
uvicorn = {extras = ["standard"], version = ">=0.30.1,<0.50.0"}
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = ">=0.29,<0.32"
alembic = "^1.13.2"
redis = {extras = ["hiredis"], version = ">=5.0.7,<9.0.0"}
qdrant-client = "^1.9.1"
minio = "^7.2.7"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = ">=42.0.8,<50.0.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-instrumentation-sqlalchemy = "^0.46b0"
opentelemetry-instrumentation-redis = "^0.46b0"
opentelemetry-exporter-otlp = "^1.25.0"
python-multipart = ">=0.0.9,<0.0.33"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = ">=0.23.7,<1.5.0"
ruff = ">=0.4.10,<0.16.0"
mypy = ">=1.10.1,<3.0.0"
types-passlib = "^1.7.7.20240327"
types-redis = "^4.6.0.20240425"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "ARG", "PTH"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic"]
