[tool.poetry]
name = "neuromesh-sdk"
version = "0.1.0"
description = "Python SDK client for NeuroMeshOSS agent workflows"
authors = ["NeuroMesh Maintainers <maintainers@neuromesh.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
websockets = "^12.0"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
